CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_OSX_DEPLOYMENT_TARGET "10.15" CACHE STRING "Minimum OS X deployment version")

PROJECT("VTK_Project_Ladislas_WALCAK")

SET(VANILLA_EXE vanilla)
SET(MPI_EXE mpi)

IF (APPLE)
    SET(OperatingSystem "Mac os X")
    FIND_PACKAGE(VTK 7 REQUIRED)
    SET(MY_MESHES_PATH /Users/emmanuelmelin/shared_folders/data_VTK/DEVOIR)
ENDIF (APPLE)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    SET(OperatingSystem "Linux")
    FIND_PACKAGE(VTK)
#    SET(MY_MESHES_PATH /share/etud/mystere/)
    SET(MY_MESHES_PATH /home/ladislus/Git/m2_bd-visualisation_project/data)
ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
INCLUDE(${VTK_USE_FILE})

#MESSAGE(WARNING "System detected: ${OperatingSystem}")
#MESSAGE(WARNING "Path to files: ${MY_MESHES_PATH}")

CONFIGURE_FILE(
        "${PROJECT_SOURCE_DIR}/config.h.in"
        "${PROJECT_BINARY_DIR}/config.h"
)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

FILE(GLOB VANILLA_SRC ${CMAKE_CURRENT_SOURCE_DIR}/proj.cpp)
FILE(GLOB MPI_SRC ${CMAKE_CURRENT_SOURCE_DIR}/mpi.cpp)

ADD_EXECUTABLE(${VANILLA_EXE} ${VANILLA_SRC})
TARGET_LINK_LIBRARIES(${VANILLA_EXE} ${VTK_LIBRARIES})

ADD_EXECUTABLE(${MPI_EXE} ${MPI_SRC})
TARGET_LINK_LIBRARIES(${MPI_EXE} ${VTK_LIBRARIES} ${MPI_LIBRARIES})
IF(MPI_COMPILE_FLAGS)
    SET_TARGET_PROPERTIES(${MPI_EXE} PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
ENDIF()
IF(MPI_LINK_FLAGS)
    SET_TARGET_PROPERTIES(${MPI_EXE} PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
ENDIF()

ADD_CUSTOM_TARGET(prun1
        COMMAND mpirun -np 1 ${MPI_EXE}
        DEPENDS ${MPI_EXE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

ADD_CUSTOM_TARGET(prun2
        COMMAND mpirun -np 2 ${MPI_EXE}
        DEPENDS ${MPI_EXE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)

ADD_CUSTOM_TARGET(prun4
        COMMAND mpirun -np 4 ${MPI_EXE}
        DEPENDS ${MPI_EXE}
        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
)
